# polars-essentials

./: .gitignore  README.md  essentials-day-1.ipynb  essentials-day-2.ipynb  pyproject.toml
data/: animals.csv  animals_dirty.csv  awards.csv  github_events.ndjson  orders.parquet  quotes.parquet  scientists.xlsx  sensor_readings.parquet  trades.parquet
