[project]
name = "polars-essentials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars[xlsxwriter,calamine]>=1.40.1",
    "pyarrow>=24.0.0",
    "jupyter>=1.1.1",
    "textblob>=0.20.0",
    "altair>=6.1.0",
    "graphviz>=0.21",
]
